# octopus-window-manager

./: AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
debian/: changelog  control  copyright  postinst  prerm  rules
doc/: Makefile.am  Makefile.in  octopus.1  octopus.1.in  octopus.1x  octopus_remote.1.in  octopus_setbg.1  octopus_setbg.1.in  octopus_xkeyd.1.in
examples/: Makefile.am  Makefile.in  config.xml.in  xkeyb.xml.in
src/: Makefile.am  Makefile.in  action_system.c  action_system.h  client.c  client.h  events.c  events.h  ewmh.c  ewmh.h  glib_log_ext.h  input.c  input.h  main.c  main.h  mwm_stuff.h  octopus.h  osd_cli.c  osd_cli.h  rect.c  rect.h  userconfig.c  userconfig.h  vdesk.c  vdesk.h  winactions.c  winactions.h  winframe.c  winframe.h  xinerama.c  xinerama.h
utils/: Makefile.am  Makefile.in  octopus_remote.c  octopus_setbg.c  octopus_xkeyd.c  xkeyd_userconfig.c  xkeyd_userconfig.h
