octopus_CFLAGS = @GLIB_CFLAGS@ @X_CFLAGS@ @PANGOCAIRO_CFLAGS@ @X11_CFLAGS@
octopus_LDFLAGS = @GLIB_LIBS@ @X_LIBS@ @X_EXTRA_LIBS@ @PANGOCAIRO_LIBS@ @X11_LIBS@
noinst_HEADERS = action_system.h client.h events.h ewmh.h glib_log_ext.h input.h main.h mwm_stuff.h octopus.h userconfig.h vdesk.h winactions.h winframe.h xinerama.h rect.h osd_cli.h
octopus_SOURCES = main.c client.c events.c winactions.c vdesk.c ewmh.c winframe.c userconfig.c action_system.c input.c xinerama.c rect.c osd_cli.c

bin_PROGRAMS = octopus
