octopus_setbg_CFLAGS = @GDK_PIXBUF_XLIB_CFLAGS@
octopus_setbg_LDFLAGS = @GDK_PIXBUF_XLIB_LIBS@
octopus_xkeyd_CFLAGS = @GDK_PIXBUF_XLIB_CFLAGS@
octopus_xkeyd_LDFLAGS = @GDK_PIXBUF_XLIB_LIBS@
octopus_remote_CFLAGS = @GDK_PIXBUF_XLIB_CFLAGS@
octopus_remote_LDFLAGS = @GDK_PIXBUF_XLIB_LIBS@
noinst_HEADERS = xkeyd_userconfig.h
octopus_xkeyd_SOURCES = octopus_xkeyd.c xkeyd_userconfig.c
bin_PROGRAMS = octopus_setbg octopus_xkeyd octopus_remote
